qmoney calculation part