@@ -3,40 +3,33 @@ package com.crio.warmup.stock;
 
 import com.crio.warmup.stock.dto.AnnualizedReturn;
 import com.crio.warmup.stock.dto.PortfolioTrade;
-
 import com.crio.warmup.stock.dto.TiingoCandle;
-
 import com.crio.warmup.stock.log.UncaughtExceptionHandler;
-// import com.fasterxml.jackson.core.JsonParseException;
-// import com.fasterxml.jackson.databind.JsonMappingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 import java.io.File;
 // import java.io.FileWriter;
 import java.io.IOException;
-import java.lang.Math;
 // import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Paths;
 import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
-
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.UUID;
-
 import java.util.logging.Logger;
-import java.time.temporal.ChronoUnit;
 
-import org.apache.commons.math3.analysis.function.Pow;
 import org.apache.logging.log4j.ThreadContext;
-// import org.springframework.http.ResponseEntity;
+
+import org.springframework.http.ResponseEntity;
+
 import org.springframework.web.client.RestTemplate;
 
 public class PortfolioManagerApplication {
@@ -46,17 +39,17 @@ public class PortfolioManagerApplication {
 
   private static Double  dateDiffDays(String start,LocalDate end) {
     
-    long diff=ChronoUnit.DAYS.between(LocalDate.parse(start), end);
-    Long l=new Long(diff);
-    return l.doubleValue()/365;
+    long diff = ChronoUnit.DAYS.between(LocalDate.parse(start), end);
+    Long l = Long.valueOf(diff);
+    return l.doubleValue() / 365;
   }
 
   private static List<String> sortByKey() {
 
     List<String> finalstocks = new ArrayList<>();
     finalstocks.clear();
-    System.out.print(finalstocks);
-    System.out.print(stocks);
+    // System.out.print(finalstocks);
+    // System.out.print(stocks);
     // System.out.print("final stock before returning and clearing before loop" +
     // finalstocks);
     // System.out.print(" stock before returning and clearing before loop" +
@@ -288,13 +281,21 @@ public class PortfolioManagerApplication {
   //     ./gradlew test --tests PortfolioManagerApplicationTest.testCalculateAnnualizedReturn
 
 
-  //exp formula
+  
   public static AnnualizedReturn calculateAnnualizedReturns(LocalDate endDate,
-      PortfolioTrade trade, Double buyPrice, Double sellPrice) {
-      Double total_num_years=dateDiffDays(trade.getPurchaseDate(), endDate);
-      Double total_returns=(sellPrice-buyPrice)/buyPrice;
-      Double annualized_returns = Math.pow((1 + total_returns) ,(1 / total_num_years)) - 1;
-      return new AnnualizedReturn(trade.getSymbol(), annualized_returns, total_returns);
+      PortfolioTrade trade, Double buyPrice, Double sellPrice)  {
+    Double years = dateDiffDays(trade.getPurchaseDate(), endDate);
+    Double returns = (sellPrice - buyPrice) / buyPrice;
+    Double annualized = Math.pow((1 + returns), (1 / years)) - 1;
+    
+    // AnnualizedReturn ret = new AnnualizedReturn(trade.getSymbol(), annualized, returns);
+    // if (trade != null) {
+    //   return new AnnualizedReturn(trade.getSymbol(), annualized, returns);
+    // } else {
+    //   return null;
+    // }
+    return new AnnualizedReturn(trade.getSymbol(), annualized, returns);
+    
       
   }
 
@@ -311,45 +312,43 @@ public class PortfolioManagerApplication {
   public static List<AnnualizedReturn> mainCalculateSingleReturn(String[] args)
       throws IOException, URISyntaxException {
         
-     List<AnnualizedReturn> trades=new ArrayList<>();
-     List<Double> openprices=new ArrayList<>();
-     List<Double> closeprices=new ArrayList<>();
-     ObjectMapper obj=new ObjectMapper();
-     RestTemplate rst=new RestTemplate();
-     PortfolioTrade[] trds = obj.readValue(resolveFileFromResources(args[0]), PortfolioTrade[].class);
-     for (PortfolioTrade trd: trds) {
-        String url = "https://api.tiingo.com/tiingo/daily/" + trd.getSymbol()
-        + "/prices?startDate=" + trd.getPurchaseDate() + "&endDate="+args[1]
-        + "&token=0175e650eb18193394fdc2c225b0c0ba954fa0a4";
+    List<AnnualizedReturn> trades = new ArrayList<>();
+    List<Double> openprices = new ArrayList<>();
+    List<Double> closeprices = new ArrayList<>();
+    ObjectMapper obj = new ObjectMapper();
+    RestTemplate rst = new RestTemplate();
+    PortfolioTrade[] trds = obj.readValue(resolveFileFromResources(args[0]), 
+      PortfolioTrade[].class);
+    for (PortfolioTrade trd: trds) {
+      String url = "https://api.tiingo.com/tiingo/daily/" + trd.getSymbol()
+          + "/prices?startDate=" + trd.getPurchaseDate() + "&endDate=" + args[1]
+          + "&token=0175e650eb18193394fdc2c225b0c0ba954fa0a4";
 
-        // PortfolioTrade[] tds=rst.getForObject(url, PortfolioTrade[].class);
-        TiingoCandle[] tds=rst.getForObject(url, TiingoCandle[].class);
+      // PortfolioTrade[] tds=rst.getForObject(url, PortfolioTrade[].class);
+      TiingoCandle[] tds = rst.getForObject(url, TiingoCandle[].class);
+
+      if (tds != null) {
         for (TiingoCandle t: tds) {
           openprices.add(t.getOpen());
           closeprices.add(t.getClose());
         }
-        Double buyPrice=openprices.get(0);
-        Double sellPrice=closeprices.get(closeprices.size()-1);
+      }
+      Double buyPrice = openprices.get(0);
+      Double sellPrice = closeprices.get(closeprices.size() - 1);
         
-        AnnualizedReturn aReturn = calculateAnnualizedReturns(LocalDate.parse(args[1]), trd, buyPrice, sellPrice);
-        trades.add(aReturn);
-        System.out.println(trades);
-        openprices.clear();
-        closeprices.clear();
-        // AnnualizedReturn aReturn=new AnnualizedReturn(trd.getSymbol(), annualizedReturn, totalReturns)
-        //calculateAnnualizedReturns(endDate, trade, buyPrice, sellPrice)
+      AnnualizedReturn ar = calculateAnnualizedReturns(LocalDate.parse(args[1]), trd, 
+          buyPrice, sellPrice);
+      trades.add(ar);
+      System.out.println(trades);
+      openprices.clear();
+      closeprices.clear();
         
         
-        //calculateAnnualizedReturns(endDate, trade, buyPrice, sellPrice)
-        // AnnualizedReturn aReturns=rst.getForObject(url, AnnualizedReturn.class);
-        
-        // trades.add(aReturns);
-        // Double 
-     }
-    //  System.out.println(trades);
+    }
+   
     
-     return trades;
-    //  return Collections.emptyList();
+    return trades;
+    
   }
 
 
